[gd_scene load_steps=7 format=3 uid="uid://bb45jskpc0d1x"]

[ext_resource type="Script" uid="uid://vqps2y80kk5l" path="res://voice_command.gd" id="1_xiyvh"]
[ext_resource type="Texture2D" uid="uid://dwe25n6wnjvu0" path="res://fontawesome/times-circle.svg" id="2_ddif4"]
[ext_resource type="Texture2D" uid="uid://yi71kumapbb4" path="res://fontawesome/life-ring.svg" id="2_wuo82"]
[ext_resource type="Texture2D" uid="uid://dxxw3mcgnda0a" path="res://fontawesome/keyboard.svg" id="3_c13al"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xiyvh"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(1, 0.98634, 0.9078, 1)
border_color = Color(1, 1, 0.98345, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wuo82"]
bg_color = Color(0.58392, 0.72, 0.5256, 0.843137)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="VoiceCommand" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_xiyvh")
script = ExtResource("1_xiyvh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Bindable" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "vs-bindable-tooltip"
theme_override_styles/pressed = SubResource("StyleBoxFlat_wuo82")
toggle_mode = true
icon = ExtResource("2_wuo82")
icon_alignment = 1
expand_icon = true

[node name="PingWheelBindable" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "vc-ping-bindable-tooltip"
theme_override_styles/pressed = SubResource("StyleBoxFlat_wuo82")
toggle_mode = true
icon = ExtResource("3_c13al")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Delete" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "vc-delete-tooltip"
icon = ExtResource("2_ddif4")

[connection signal="toggled" from="HBoxContainer/Bindable" to="." method="_on_bindable_toggled"]
[connection signal="toggled" from="HBoxContainer/PingWheelBindable" to="." method="_on_ping_wheel_bindable_toggled"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
